--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+IDS290R/UserSettings/EditorUserSettings.asset
+IDS290R/UserSettings/EditorUserSettings.asset
