--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ crashlytics-build.properties
 
 IDS290R/UserSettings/EditorUserSettings.asset
 IDS290R/UserSettings/EditorUserSettings.asset
+IDS290R/Assets/Scenes/EndingScene.unity
